Preserve all node events
Node events are now limited by a total size limit, instead of one per type.